AUTOMAKE_OPTS = gnu

DEFS += -include $(top_builddir)/include/confdefs.h

cwinclude_HEADERS = acl.h \
					adsi.h \
					aes.h \
					alaw.h \
					app.h \
					callweaver_db.h \
					callweaver_expr.h \
					callweaver_hash.h \
					callweaver_keywords.h \
					callweaver_mm.h \
					causes.h \
					cdr.h \
					chan_capi.h \
					chan_capi20.h \
					channel.h \
					chanvars.h \
					cli.h \
					compiler.h \
					config.h \
					crypto.h \
					cwobj.h \
					devicestate.h \
					dlfcn-compat.h \
					dns.h \
					dnsmgr.h \
					dsp.h \
					dundi.h \
					enum.h \
					features.h \
					file.h \
					frame.h \
					generator.h \
					generic_jb.h \
					image.h \
					indications.h \
					inline_api.h \
					io.h \
					linkedlists.h \
					localtime.h \
					lock.h \
					logger.h \
					manager.h \
					module.h \
					monitor.h \
					musiconhold.h \
					netsock.h \
					ogi.h \
					options.h \
					pbx.h \
					phone_no_utils.h \
					poll-compat.h \
					privacy.h \
					res_odbc.h \
					resonator.h \
					rtp.h \
					say.h \
					sched.h \
					slinfactory.h \
					srv.h \
					strings.h \
					stun.h \
					term.h \
					time.h \
					transcap.h \
					translate.h \
					udp.h \
					udpfromto.h \
					udptl.h \
					ulaw.h \
					unaligned.h \
					utils.h \
					xlaw.h
